yiltc-v0.2-backup/testsuite/negative/generic_wrong_type_args.yilt
// Negative test: wrong number of type arguments
// Expected: error

fn identity[T](x T) T
    return x

fn main()
    print(identity[int, str](42))
